# andrust

./: .gitignore  .gitmodules  Cargo.toml  README.md
docs/: CROSS_COMPILE.md  rust_android.md
source_config/: config.toml  download.json
src/: command.rs  config.rs  downloader.rs  downloader_test.rs  main.rs  platform.rs  unarchiver.rs  unarchiver_test.rs
src/platform/: linux.rs  mac.rs  win.rs
