[package]
name = "andrust"
version = "0.1.0"
authors = ["AllowFlame <closelogin@hanmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4.3"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
crossterm = "0.17.7"

serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
