[package]
name = "andrust"
version = "0.1.0"
authors = ["AllowFlame <closelogin@hanmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.17.7"
futures = "0.3"

serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
zip = "0.5.6"

webcraft = { path = "./submodule/webcraft" }